# Slayergit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: normalize_compile_commands.cmake
docs/: 00-architecture.md  decisions_rationale.md  kickoff.md
docs/slices/: 01-ui-panels-navigation.md  02-git-status-integration.md  03-file-staging-operations.md  04-commit-creation.md  05-branch-viewing-switching.md  06-commit-history-viewing.md  07-diff-viewing.md  08-stash-operations.md  09-reflog-viewing.md  10-branch-management.md  11-remote-operations.md  12-configuration-theming.md
examples/: README.md
examples/003-manual-refresh-f5/: README.md  app_state_refresh.hpp  application_f5_handler.cpp  async_refresh_pattern.cpp  command_with_refresh.cpp  performance_monitoring.cpp
examples/basic-skeleton/src/ui/: main.cpp  tab.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
examples/basic-skeleton/src/ui/tabs/: commits_tab.cpp  commits_tab.hpp  details_view.cpp  details_view.hpp  local_branches_tab.cpp  local_branches_tab.hpp  reflog_tab.cpp  reflog_tab.hpp  remote_branches_tab.cpp  remote_branches_tab.hpp  staged_tab.cpp  staged_tab.hpp  stashes_view.cpp  stashes_view.hpp  tags_tab.cpp  tags_tab.hpp  unstaged_tab.cpp  unstaged_tab.hpp
src/: main.cpp
src/ui/: input_handler.cpp  input_handler.hpp  tab.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp  window_tab.cpp  window_tab.hpp
src/ui/tabs/: commits_tab.cpp  commits_tab.hpp  details_view.cpp  details_view.hpp  local_branches_tab.cpp  local_branches_tab.hpp  reflog_tab.cpp  reflog_tab.hpp  remote_branches_tab.cpp  remote_branches_tab.hpp  staged_tab.cpp  staged_tab.hpp  stashes_view.cpp  stashes_view.hpp  tags_tab.cpp  tags_tab.hpp  unstaged_tab.cpp  unstaged_tab.hpp
